# Hebrew-NLP-Pipeline

./: $null  .clinerules  .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CORPUS_INDEX.csv  CORPUS_INDEX.md  COVERAGE_ANALYSIS.md  Dockerfile  ENV_SETUP.md  EXPECTATION_TYPES.md  HEURISTICS.md  MANUAL_RUNBOOK.md  Makefile  POWERSHELL_RUN_EXAMPLES.md  README.md  SYSTEM_METHODOLOGY.md  VALIDATION_STRATEGY.md  audit_v1.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  results.csv  test_tts_artefacts.py
Tasks/: 3. TZ_UI_desktop_KADIMA.md  4. TZ_audit.md  COLD_AUDIT_FRAMEWORK.md  DEFINITION_OF_DONE.md  Kadima.txt  Kadima_v2.md  STRATEGIC_PLAN_KADIMA_VBOOK_MIGRATION_Qwen3.6PlusPeview.md  STRATEGIC_PLAN_KADIMA_v2_ClaudeCode.md  STRATEGIC_PLAN_xiaomi_MiMoV2pro.md  T5_UI_UX_CONTRACT.md  test_extract_terms.txt
artefacts/: ner_m17_gold_smoke.json  ner_m17_smoke.json  stt_m16_smoke.json  translate_m14_google_unofficial_smoke.json  translate_m14_smoke.json
config/: config.default.yaml  config.schema.json
doc/: KADIMA_MASTER_PLAN_v2.md  audit_v1.md
he_01_sentence_token_lemma_basics/: corpus_manifest.json  expected_counts.yaml  manual_checklist.md  review_sheet.csv
he_02_noise_and_borderline/: corpus_manifest.json  expected_terms.csv  manual_checklist.md
he_03_docfreq_crossdoc/: expected_counts.yaml  expected_lemmas.csv  expected_terms.csv  manual_checklist.md
he_04_ngram_np_patterns/: corpus_manifest.json  expected_counts.yaml  expected_lemmas.csv  expected_terms.csv  manual_checklist.md
he_05_terms_balanced/: expected_counts.yaml  expected_lemmas.csv  expected_terms.csv  (+1 more)
(+443 files in other folders)
